--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="Logo"></div>
         <h1 class="Heading">Quiz App</h1>
         <p class="Quote">Test Your Knowledge With This App</p>
-        <button class="startBtn Active">Play Now!</button>
+        <button class="startBtn">Play Now!</button>
       </div>
       <div class="categorySelection">
         <h2 class="Title">Categories</h2>
@@ -26,7 +26,7 @@
         <div class="Category">Category 2</div>
         <div class="Category">Category 3</div>
 
-        <button class="startBtn Active">Start</button>
+        <button class="startBtn">Start</button>
       </div>
       <div class="quizPage">
         <div class="Question">What is the Question?</div>
@@ -36,15 +36,15 @@
           <div class="Option">Option 3</div>
           <div class="Option">Option 4</div>
         </div>
-        <button class="startBtn Active">Submit</button>
+        <button class="startBtn">Submit</button>
       </div>
 
-      <div style="display: none;" class="ResultPage">
+      <div class="ResultPage">
         <h1 class="Remark">Amazing!</h1>
         <h3 class="Direction">You Scored</h3>
         <h1 class="Points">80</h1>
         <h2 class="PointsTitle">Points</h2>
-        <button style="margin-bottom: 60px;" class="startBtn Active">Play Again!</button>
+        <button style="margin-bottom: 60px;" class="startBtn">Play Again!</button>
       </div>
     </div>
 
