- UI : improved UI

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     <title>Quiz App</title>
   </head>
   <body>
+    <div class="questionCounter"></div>
+    <div class="progress-bar">
+      <div class="bar"></div>
+    </div>
     <div class="Container">
       <div class="startingPage">
         <div class="Logo"></div>
